<resources>
    <string name="app_name">Think Fast</string>
    <string name="index">Welcome to Think Fast</string>
    <string name="heimsk">Mamma þín er heimsk!</string>
    <string name="klar">Mamma þín er klár!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_msg">"No user found, would you like to sign up ?"</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="statistics">Statistics</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="play_again">Play Again</string>
    <string name="end_quiz">End Quiz</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="numPlayers">Number of Players</string>
    <string name="onePlayer">1 player</string>
    <string name="twoPlayers">2 player</string>
    <string name="chooseCategory">Choose a category</string>
    <string name="placeholder">Placeholder</string>
    <string name="delete">Delete</string>
    <string name="admin">Welcome aboard admin!</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="home">Home</string>
    <string name="correctAnswers">Correct Answers</string>
    <string name="answers"> Answers</string>
    <string name="getReady3">Get Ready!</string>
    <string name="getReady2">Set!</string>
    <string name="getReady1Player1">Think Fast Player 1!</string>
    <string name="getReady1Player2">Think Fast Player 2!</string>
    <string name="p1">Player 1</string>
    <string name="p2">Player 2</string>
    <string name="stats">Since joining Think Fast you have... </string>
    <string name="questionsInDB">Questions currently in the database:</string>
    <string name="icon_account">Account</string>
    <string name="icon_quiz">Quiz</string>
    <string name="icon_scoreboard">Scoreboard</string>
    <string name="LogOut">Log Out</string>
    <string name="scoreFor1">%1$d</string>
    <string name="scoreFor2">%1$d : %2$d</string>
    <string name="NumberOfQuestions">Number of questions</string>
    <string name="five">5 question game</string>
    <string name="ten">10 question game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
