<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/activity_header"
        android:layout_width="fill_parent"

        android:layout_height="60dp"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="-5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/velkominn_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_quiz"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/play_quiz"
            android:textColor="@color/white"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_statistics"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/statistics"
            android:textColor="@color/white"
            android:visibility="visible"
            tools:ignore="DuplicateSpeakableTextCheck" />


        <RadioGroup
            android:id="@+id/rg_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/numPlayersTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numPlayers"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/rg_p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onePlayer" />

            <RadioButton
                android:id="@+id/rg_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twoPlayers" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chooseCategory" />

            <RadioButton
                android:id="@+id/rb_c1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/rb_c2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />

            <RadioButton
                android:id="@+id/rb_c3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />

            <RadioButton
                android:id="@+id/rb_c4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_numOfQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NumberOfQuestions" />

            <RadioButton
                android:id="@+id/rb_nq5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <RadioButton
                android:id="@+id/rb_nq10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ten" />
        </RadioGroup>

        <Button
            android:id="@+id/bQuizSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_quiz"
            android:textColor="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/getReadyCountDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:padding="0dp"
        android:textAlignment="center"
        app:itemBackground="@color/purple_500"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>